Refactor: Core components and feature implementation
Refactors and organizes Android core components into a dedicated `core_component` package.

This commit introduces several new features and examples:
- **Common Intents**: Implements examples for various common intents such as making calls, sending emails, opening web pages, and using the photo picker.
- **ContentResolver**: Adds functionality to query gallery images, save images to the gallery, and copy images to private app storage. Includes handling for `READ_MEDIA_IMAGES` permission.
- **PendingIntent & AlarmManager**: Demonstrates scheduling exact alarms.
- **Permissions**: Adds a dedicated activity to illustrate the flow for requesting single, multiple, and permanently denied permissions.
- **Notifications**: Implements a basic notification channel and builder.
- **File I/O**: Adds functionality for creating directories and saving/reading text files in the app's internal storage.
- Adds a string plurals resource for formatting scores.
- Updates Gradle dependencies, including adding Coil for image loading.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Test</string>
+    <string name="students_score">You scored %1$s out of %2$d</string>
+    <plurals name="points">
+        <item quantity="one">%d point</item>
+        <item quantity="other">%d points</item>
+    </plurals>
 </resources>
